--- a/requirements.txt
+++ b/requirements.txt
@@ -35,11 +35,13 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 numpy==1.26.4
 pillow==10.2.0
+python-dateutil==2.9.0.post0
 python-nvd3==0.14.2
 python-slugify==1.1.4
 pytz==2024.1
 requests==2.31.0
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 sqlparse==0.4.4
