--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,14 @@
 runtime: python
 env: flex
 
+readiness_check:
+  path: "/_ah/health"
+  check_interval_sec: 5
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
+  app_start_timeout_sec: 300
+
 handlers:
 - url: /.*
   script: auto
