--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 admin_tools==0.1
 asgiref==3.7.2
 beautifulsoup4==4.12.3
+boto3==1.34.69
+botocore==1.34.69
 branca==0.7.1
 certifi==2024.2.2
 chardet==3.0.4
@@ -18,10 +20,12 @@ django-leaflet==0.29.0
 django-memoize==2.3.1
 django-multiselectfield==0.1.12
 django-nvd3==0.9.7
+django-storages==1.14.2
 django-tailwind==3.8.0
 djangorestframework==3.14.0
 folium==0.15.1
 googletrans==4.0.0rc1
+gunicorn==21.2.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -32,8 +36,10 @@ hyperframe==5.2.0
 idna==2.10
 install==1.3.5
 Jinja2==3.1.3
+jmespath==1.0.1
 MarkupSafe==2.1.5
 numpy==1.26.4
+packaging==24.0
 pillow==10.2.0
 python-dateutil==2.9.0.post0
 python-nvd3==0.14.2
@@ -41,6 +47,7 @@ python-slugify==1.1.4
 pytz==2024.1
 requests==2.31.0
 rfc3986==1.5.0
+s3transfer==0.10.1
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
