--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 admin_tools==0.1
+setuptools>=60.9.0
 asgiref==3.7.2
 beautifulsoup4==4.12.3
 boto3==1.34.69
@@ -58,3 +59,5 @@ tzdata==2024.1
 Unidecode==1.3.8
 urllib3==2.2.1
 xyzservices==2023.10.1
+dj-database-url==2.1.0
+python-dotenv==1.0.1
